welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: too many arguments for method getX: ()Int
getX(2):Int
    ^