welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
getX(2):Int

